完成加载页面数据并展示,调整了 action 和reducer 的写法,更正了一些类型的定义

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "terser-webpack-plugin": "1.4.1",
     "ts-md5": "^1.2.6",
     "ts-pnp": "1.1.4",
+    "typesafe-actions": "^4.4.2",
     "typescript": "3.6.4",
     "url-loader": "2.1.0",
     "webpack": "4.41.0",
